conditions.Conditions.scala.error
Erreur de compilation :
Conditions:1: error: not found: value False
if (estFaceMur() == False ) {
                    ^Conditions:2: error: not found: value avancer
  avancer() ;
  ^Conditions:4: error: not found: value reculer
  reculer() ;
  ^